--- a/qml.qrc
+++ b/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>qml/main.qml</file>
         <file>qml/UpgradeWindows.qml</file>
+        <file>qml/NormalProgressBar.qml</file>
     </qresource>
 </RCC>
