feat(swupdate-ui) Add new qml ui

--- a/qml.qrc
+++ b/qml.qrc
@@ -1,5 +1,10 @@
 <RCC>
     <qresource prefix="/">
         <file>qml/main.qml</file>
+        <file>qml/UpgradeWindows.qml</file>
+        <file>image/background.png</file>
+        <file>image/iconPark-tool.png</file>
+        <file>image/iconPark-tool2.png</file>
+        <file>image/iconMesg.png</file>
     </qresource>
 </RCC>
